fix: light/dark mode toggle button stays white in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -52,14 +52,7 @@
 	--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 	/* --ifm-navbar-background-color: red !important;
 	--ifm-footer-background-color: red !important; */
-	svg {
+	.feature-item-component {
 		filter: invert(1);
-		fill: var(--svg-color-dark);
-	}
-	.hero--primary {
-		--ifm-hero-text-color: white;
-	}
-	.toggleButton_gllP {
-		color: white;
 	}
 }
